--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
-*.pyc
+# Python
 __pycache__/
-.ipynb_checkpoints/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
 .env
 venv/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# VS Code
+.vscode/
+
+# MacOS
+.DS_Store
